# brainimg

./: .gitignore  AGENTS.md  LICENSE  Makefile  NOTICE.md  PAPER.md  PAPER.typ  PLAN.md  README.md  TODO-PUBLISH.md  TODO.md  decoder.py  pyproject.toml  requirements.txt
brainimg/: .___init__.py  __init__.py  extract.py  format.py  generate.py
docs/paper/: PAPER.md  PAPER.typ
docs/planning/: TODO.md
scripts/: analyze_lenna_regions.py  analyze_regions.py  compare_backends.py  compare_lenna.py  make_backend_grid.py  make_comparison.py  make_lenna_grid.py  make_sample.py  patch_lenna_prompt.py  run_all_grids.py  show_maps.py  sweep_lenna.py  sweep_scales.py
src/: decoder.py  encoder.py
src/brainimg/: __init__.py  device.py  extract.py  generate.py
tests/: test_color.py  test_flux_config.py  test_format.py
